# openai_summary_tool

./: .gitignore  LICENSES  README.md  README_zh-TW.md  download.py  main.py  pyproject.toml  speech_to_text.py  split_audio.py  summary.py
